# greeting_ingester

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.Docker.md  build_and_load_image.sh  compose.yaml
.sqlx/: query-1c86217eca1461dd6e210e3737f054336ce82ece317711afbb171a28f46f2034.json
kubernetes/: greeting-blob-storage.yaml  greeting-ingester.yaml  greeting-processor-job.yaml  greeting-processor-rust.yaml  greeting-processor.yaml  keda-2.14.0.yaml  postgres-greeting.yaml
migrations/: 1_initial-tables.sql  2_generate_log.sql
src/: blob_writer.rs  db.rs  greeting_log.rs  greetings.rs  kafka_consumer.rs  kafka_single_msg_consumer.rs  main.rs  my_consumer.rs  observability.rs  open_telemetry.rs  settings.rs
