[package]
name = "greeting_processor_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#kafka = "0.10.0"
serde_json = "1.0.85"
config = "0.14.0"
serde = { version = "1.0.204", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
sqlx = { version = "0.8", features = [ "runtime-tokio" , "sqlite", "chrono", "postgres","macros", "uuid"] }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.30"
log = "0.4.21"
async-trait = "0.1.81"
uuid = { version = "1.3.1", features = ["v7"]}


#OTEL
opentelemetry = {version = "0.29.0",features = ["metrics", "logs"] }
greeting_otel={git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.29"}

tracing-subscriber= {version= "0.3",features = ["env-filter","registry", "std"]}
tracing = { version = "0.1", features = ["std"]}
tracing-core ="0.1"
tracing-opentelemetry = "0.30.0"

actix-web = "4.9.0"

azure_storage_blobs = "0.21.0"
azure_storage = "0.21.0"
azure_core = "0.21.0"
azure_sdk_storage_blob = "0.45.3"
azure_sdk_storage_core = "0.44.3"
azure_identity = "0.21.0"