[package]
name = "greeting-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#kafka = "0.10.0"
serde_json = "1.0.85"
config = "0.15.13"
serde = { version = "1.0.204", features = ["derive"] }
dotenv = "0.15.0"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
log = "0.4.21"
async-trait = "0.1.81"
#greeting_db_api = { version = "0.1.0", path = "../greeting_db_api" }
 greeting_db_api = { version = "0.1.0", git = "https://github.com/arnecdn/greeting_db_api"}

#OTEL
opentelemetry = { version = "0.30.0", features = ["metrics", "logs"] }
greeting_otel = { git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.30.0" }

tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std"] }
tracing = { version = "0.1", features = ["std"] }
tracing-core = "0.1"
tracing-opentelemetry = "0.31.0"

actix-web = "4.9.0"
